it/snapshots/cli__php_install_allows_manifest_default_track_when_omitted.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        0,
    ),
    stdout: "Install a PHP track\n\nUsage: pv php:install [OPTIONS] [track]\n\nArguments:\n  [track]  PHP track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
    stderr: "",
}
