it/snapshots/cli__php_management_commands_are_documented.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Set the PHP track\n\nUsage: pv php:use [OPTIONS] <track>\n\nArguments:\n  <track>  PHP track to use\n\nOptions:\n  -g, --global    Set the global PHP default\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Install a PHP track\n\nUsage: pv php:install [OPTIONS] [track]\n\nArguments:\n  [track]  PHP track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update installed PHP tracks\n\nUsage: pv php:update [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall a PHP track\n\nUsage: pv php:uninstall [OPTIONS] <track>\n\nArguments:\n  <track>  PHP track to uninstall\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned runtime data for the track\n      --force     Remove the track even if Projects use it\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List installed PHP tracks\n\nUsage: pv php:list [OPTIONS]\n\nOptions:\n      --json      Print command output as JSON\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
