it/snapshots/cli__postgres_commands_are_documented.snap
---
source: it/cli.rs
expression: output
---
[
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Install a Postgres track\n\nUsage: pv postgres:install [OPTIONS] [track]\n\nArguments:\n  [track]  Postgres track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update installed Postgres tracks\n\nUsage: pv postgres:update [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall a Postgres track\n\nUsage: pv postgres:uninstall [OPTIONS] <track>\n\nArguments:\n  <track>  Postgres track to uninstall\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned Postgres data for the track\n      --force     Remove the track even if Projects use it\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List installed Postgres tracks\n\nUsage: pv postgres:list [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Install a Postgres track\n\nUsage: pv pg:install [OPTIONS] [track]\n\nArguments:\n  [track]  Postgres track to install\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Update installed Postgres tracks\n\nUsage: pv pg:update [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Uninstall a Postgres track\n\nUsage: pv pg:uninstall [OPTIONS] <track>\n\nArguments:\n  <track>  Postgres track to uninstall\n\nOptions:\n      --no-color  Disable colored output\n      --prune     Remove PV-owned Postgres data for the track\n      --force     Remove the track even if Projects use it\n  -h, --help      Print help\n",
        stderr: "",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "List installed Postgres tracks\n\nUsage: pv pg:list [OPTIONS]\n\nOptions:\n      --no-color  Disable colored output\n  -h, --help      Print help\n",
        stderr: "",
    },
]
