it/snapshots/cli__project_env_renders_values_from_binary_without_mutating_dotenv.snap
---
source: it/cli.rs
expression: "(link, project_env, env_after)"
---
(
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "Linked https://acme-store.test -> <tempdir>/Acme Store\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    CommandOutput {
        code: Some(
            0,
        ),
        stdout: "APP_URL=https://acme-store.test\n",
        stderr: "",
    },
    "APP_URL=https://user.test\n",
)
