it/snapshots/cli__project_init_rejects_conflicting_config_files_without_writing.snap
---
source: it/cli.rs
expression: output
---
CommandOutput {
    code: Some(
        1,
    ),
    stdout: "",
    stderr: "error: Project config file conflict: both \"<tempdir>/Acme Store/pv.yml\" and \"<tempdir>/Acme Store/pv.yaml\" exist\n",
}
